dir 调整
