# golang/api/chatgpt.go
@@ -45,39 +45,6 @@ func GetClient() *openai.Client {
 	return client
 }
 
-// @Summary Generate Text Completion
-// @Description Generate text completion based on prompt
-// @Tags v1
-// @Accept json
-// @Produce json
-// @Param prompt query string true "Prompt for text completion"
-// @Param max_tokens query int false "Maximum number of tokens to generate"
-// @Success 200 {string} string "Generated text"
-// @Failure 500 {string} string "Internal server error"
-// @Router /v1/gpt/text-completion [get]
-func TextCompletion(c *gin.Context) {
-	// 获取请求参数
-	prompt := c.Query("prompt")
-	maxTokens := infra.Setting.ChatGPT.MaxTokens // 默认最大token数为100
-
-	// 创建文本生成请求
-	req := openai.CompletionRequest{
-		Model:     infra.Setting.ChatGPT.Model,
-		Prompt:    prompt,
-		MaxTokens: int(maxTokens),
-	}
-
-	// 调用OpenAI生成文本
-	resp, err := GetClient().CreateCompletion(context.Background(), req)
-	if err != nil {
-		c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-		return
-	}
-
-	// 将生成的文本以JSON格式返回
-	c.JSON(http.StatusOK, resp.Choices[0].Text)
-}
-
 // ChatCompletion generates chat completion text based on given input messages.
 // @Summary Generate Chat Completion
 // @Description Generate chat completion text based on input messages.
@@ -121,25 +88,6 @@ func (ctrl *ChatGptController) ChatCompletion(c *gin.Context) {
 
 	messages = append(messages, userMessage)
 
-	// Example
-	// []openai.ChatCompletionMessage{
-	// 	{
-	// 		Role:    openai.ChatMessageRoleSystem,
-	// 		Content: "你是一个商品设计小组手,根据用户少量的提示词就可以给出极具创造力，吸引力的标题",
-	// 	},
-	// 	{
-	// 		Role:    openai.ChatMessageRoleUser,
-	// 		Content: "口红，女性， 颜色",
-	// 	},
-	// 	{
-	// 		Role:    openai.ChatMessageRoleAssistant,
-	// 		Content: "最时尚的口红色彩",
-	// 	},
-	// 	{
-	// 		Role:    openai.ChatMessageRoleUser,
-	// 		Content: "球鞋，跳高，特步",
-	// 	},
-	// }
 	// 创建文本生成请求
 	req := openai.ChatCompletionRequest{
 		Model:    openai.GPT3Dot5Turbo,
